--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "game_name": "Pokemon Platinum",
     "package_version": "0.0.1",
     "package_uid": "pokemon platinum_ap",
-    "author": "palex00 & Radis7Noir & builder_script",
+    "author": "builder_script",
     "variants": {
         "Map Tracker": {
             "display_name": "Map Tracker",
