--- a/items/settings.json
+++ b/items/settings.json
@@ -103,6 +103,7 @@
         "name": "Randomize Key Items",
         "type": "progressive",
         "loop": true,
+        "initial_stage_idx": 1,
         "allow_disabled": false,
         "stages": [
             {
