Add placeholder images for events and settings

--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -39,7 +39,7 @@
         "item_size": "32,32",
         "item_h_alignment": "center",
         "item_v_alignment": "center",
-        "h_alignment": "left",
+        "h_alignment": "center",
         "rows": [
             [
                 "opt_hms",
