More Vanilla Items

--- a/items/settings.json
+++ b/items/settings.json
@@ -124,9 +124,15 @@
                 "inherit_codes": false
             },
             {
-                "name": "Randomize Key Items - ON",
+                "name": "Randomize Key Items - MOST",
                 "img": "images/settings/opt_keyitems.png",
-                "codes": "opt_keyitems, opt_keyitems_on",
+                "codes": "opt_keyitems, opt_keyitems_on, opt_coupons_off",
+                "inherit_codes": false
+            },
+            {
+                "name": "Randomize Key Items - ALL",
+                "img": "images/settings/opt_keyitems.png",
+                "codes": "opt_keyitems, opt_keyitems_on, opt_coupons_on",
                 "inherit_codes": false
             }
         ]
