--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
     "package_version": "1.0.0",
     "package_uid": "pokemon_platinum_ap",
     "min_poptracker_version": "0.33.0",
-    "author": "palex00 & Radis7Noir",,
-    "versions_url": "https://raw.githubusercontent.com/palex00/platinum-ap-tracker/versions/versions.json"
+    "author": "palex00 & Radis7Noir",
+    "versions_url": "https://raw.githubusercontent.com/palex00/platinum-ap-tracker/versions/versions.json",
     "variants": {
         "standard": {
             "display_name": "Map Tracker (Horizontal)",
