Update Layout Files

--- a/layouts/items/items_hmreader_marshpass_storagekey_unownfile.json
+++ b/layouts/items/items_hmreader_marshpass_storagekey_unownfile.json
@@ -57,9 +57,9 @@
                                 "poketch",
                                 "dowsingmachine",
 								"marshpass",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
+                                "hmreader",
                                 "unownfile"
                             ]
                         ]
@@ -126,9 +126,9 @@
                                 "poketch",
                                 "dowsingmachine",
 								"marshpass",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
+                                "hmreader",
                                 "unownfile"
                             ]
                         ]
