--- a/layouts/items/items_hmreader_marshpass_unownfile.json
+++ b/layouts/items/items_hmreader_marshpass_unownfile.json
@@ -55,9 +55,10 @@
                                 "bicycle",
                                 "poketch",
                                 "dowsingmachine",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "marshpass",
+                                "daytime",
+                                "nighttime",
+                                "hmreader",
                                 "unownfile"
                             ]
                         ]
@@ -122,9 +123,10 @@
                                 "bicycle",
                                 "poketch",
                                 "dowsingmachine",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "marshpass",
+                                "daytime",
+                                "nighttime",
+                                "hmreader",
                                 "unownfile"
                             ]
                         ]
