--- a/layouts/items/items_hmreader_unownfile.json
+++ b/layouts/items/items_hmreader_unownfile.json
@@ -46,7 +46,6 @@
                                 "workskey",
                                 "secretpotion",
                                 "oldcharm",
-                                "storagekey",
                                 "galactickey",
                                 "suitekey",
                                 "ssticket"
@@ -56,9 +55,10 @@
                                 "bicycle",
                                 "poketch",
                                 "dowsingmachine",
-                                "oldrod",
-                                "goodrod",
-                                "superrod"
+                                "daytime",
+                                "nighttime",
+                                "hmreader",
+                                "unownfile"
                             ]
                         ]
                     }
@@ -113,7 +113,6 @@
                                 "workskey",
                                 "secretpotion",
                                 "oldcharm",
-                                "storagekey",
                                 "galactickey",
                                 "suitekey",
                                 "ssticket"
@@ -123,9 +122,10 @@
                                 "bicycle",
                                 "poketch",
                                 "dowsingmachine",
-                                "oldrod",
-                                "goodrod",
-                                "superrod"
+                                "daytime",
+                                "nighttime",
+                                "hmreader",
+                                "unownfile"
                             ]
                         ]
                     }
