--- a/layouts/items/items_marshpass_storagekey_unownfile.json
+++ b/layouts/items/items_marshpass_storagekey_unownfile.json
@@ -48,7 +48,8 @@
                                 "oldcharm",
                                 "storagekey",
                                 "galactickey",
-                                "suitekey"
+                                "suitekey",
+                                "ssticket"
                             ],
                             [
                                 "pokedex",
@@ -56,9 +57,8 @@
                                 "poketch",
                                 "dowsingmachine",
                                 "marshpass",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
                                 "unownfile"
                             ]
                         ]
@@ -116,7 +116,8 @@
                                 "oldcharm",
                                 "storagekey",
                                 "galactickey",
-                                "suitekey"
+                                "suitekey",
+                                "ssticket"
                             ],
                             [
                                 "pokedex",
@@ -124,9 +125,8 @@
                                 "poketch",
                                 "dowsingmachine",
                                 "marshpass",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
                                 "unownfile"
                             ]
                         ]
