--- a/layouts/items/items_marshpass_unownfile.json
+++ b/layouts/items/items_marshpass_unownfile.json
@@ -47,7 +47,8 @@
                                 "secretpotion",
                                 "oldcharm",
                                 "galactickey",
-                                "suitekey"
+                                "suitekey",
+                                "ssticket"
                             ],
                             [
                                 "pokedex",
@@ -55,9 +56,8 @@
                                 "poketch",
                                 "dowsingmachine",
                                 "marshpass",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
                                 "unownfile"
                             ]
                         ]
@@ -114,7 +114,8 @@
                                 "secretpotion",
                                 "oldcharm",
                                 "galactickey",
-                                "suitekey"
+                                "suitekey",
+                                "ssticket"
                             ],
                             [
                                 "pokedex",
@@ -122,9 +123,8 @@
                                 "poketch",
                                 "dowsingmachine",
                                 "marshpass",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
                                 "unownfile"
                             ]
                         ]
