--- a/layouts/items/items_unownfile.json
+++ b/layouts/items/items_unownfile.json
@@ -47,16 +47,16 @@
                                 "secretpotion",
                                 "oldcharm",
                                 "galactickey",
-                                "suitekey"
+                                "suitekey",
+                                "ssticket"
                             ],
                             [
                                 "pokedex",
                                 "bicycle",
                                 "poketch",
                                 "dowsingmachine",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
                                 "unownfile"
                             ]
                         ]
@@ -113,16 +113,16 @@
                                 "secretpotion",
                                 "oldcharm",
                                 "galactickey",
-                                "suitekey"
+                                "suitekey",
+                                "ssticket"
                             ],
                             [
                                 "pokedex",
                                 "bicycle",
                                 "poketch",
                                 "dowsingmachine",
-                                "oldrod",
-                                "goodrod",
-                                "superrod",
+                                "daytime",
+                                "nighttime",
                                 "unownfile"
                             ]
                         ]
